add docs and controllers for products and users
